# FluentogramBot

./: .env  main.py  pyproject.toml
functions/: call_fabric.py  config_reader.py  database.py  keyboard.py
handlers/: admin_private.py
locales/: en.ftl  path_dir.py  ru.ftl
translator/: translator_manage.py  translator_middleware.py
